--- a/LAB_3/tsk_4/.env
+++ b/LAB_3/tsk_4/.env
@@ -1,2 +1,4 @@
 PROXY_URL=socks5://193.233.84.104:1080
 TOKEN=7314059265:AAEJjXlcq6M-SDdO5pUQ8eoTvrW9rZmpweU
+GOOGLE_API_KEY=AIzaSyD40cTLkUQ-QZc1dQDcrDPKe9YsJU8bKrg
+GOOGLE_CX=6194e43edfca84318
